# Advanced-terminal-chatbot

./: .env.sample  .gitignore  CHANGELOG.md  ENHANCEMENT_SUMMARY.md  IMPLEMENTATION_GUIDE.md  IMPROVEMENT_SUGGESTIONS.md  README.md  chatbot.py  chatbot_history.db  demo_enhanced_features.py  example_health_check_integration.py  main.py  pyproject.toml  requirements.txt  run_tests.py  temp_env.txt
.chatbot_context/: chatbot.db
src/advanced_terminal_chatbot/: __init__.py  chat.py  chatbot.py  clipboard_manager.py  code_analyzer.py  context_manager.py  conversation_brancher.py  database.py  history_manager.py  input_handler.py  provider.py  ui_enhancements.py  utils.py
src/advanced_terminal_chatbot/commands/: handler.py
src/advanced_terminal_chatbot/features/: __init__.py  format_controls.py  health_check.py  templates.py
src/advanced_terminal_chatbot/providers/: anthropic.py  base.py  openai.py
tests/: __init__.py  test_chat.py  test_provider_manager.py  test_providers.py  test_utils.py
